--- a/index.html
+++ b/index.html
@@ -13,16 +13,23 @@
             <form>
                 <p class="subtitle">Flight Information</p>
 
-                <label>
+                <label >
                     <span>Country</span>
-                    <input type="text" name="country"/>
+                        <select name="country" >
+                            <option>México</option>
+                            <option>USA</option>
+                            <option>Spain</option>
+                            <option>Japan</option>
+                            <option>Colombia</option>
+                        </select>
                 </label>
+
 
                 <label>
                     <span>City</span>
                     <input type="text" name="city"/>
                 </label>
-                
+
                 <label>
                     <span>Depart when?</span>
                     <input type="date" name="depart-when"/>
