--- a/index.html
+++ b/index.html
@@ -27,30 +27,31 @@
 
                 <label>
                     <span>City</span>
-                    <input type="text" name="city"/>
+                    <input type="text" name="city" required/>
                 </label>
 
                 <label>
                     <span>Depart when?</span>
-                    <input type="date" name="depart-when"/>
+                    <input type="date" name="depart-when" required/>
                 </label>
                 <label>
                     <span>Time of departure</span>
-                    <input type="time" name="depart-time"/>
+                    <input type="time" name="depart-time" required/>
                 </label>
                 <label>
                     <span>Return when?</span>
-                    <input type="date" name="return-when"/>
+                    <input type="date" name="return-when" required/>
                 </label>
                 <label>
                     <span>Time of return</span>
-                    <input type="time" name="return-time"/>
+                    <input type="time" name="return-time" required/>
                 </label>
 
                 <p class="subtitle">Traveler Information</p>
                 <label>
                     <span>Full name</span>
-                    <input type="text" name="fullname"/>
+                    <input type="text" name="fullname" 
+                    required autocomplete="name"/>
                 </label>
                 <label>
                     <span>Email</span>
